sandbox/output
AnagramTest.java:16: error: cannot find symbol
        Anagram anagram = new Anagram();
        ^
  symbol:   class Anagram
  location: class AnagramTest
AnagramTest.java:16: error: cannot find symbol
        Anagram anagram = new Anagram();
                              ^
  symbol:   class Anagram
  location: class AnagramTest
AnagramTest.java:26: error: cannot find symbol
        Anagram anagram = new Anagram();
        ^
  symbol:   class Anagram
  location: class AnagramTest
AnagramTest.java:26: error: cannot find symbol
        Anagram anagram = new Anagram();
                              ^
  symbol:   class Anagram
  location: class AnagramTest
4 errors
